--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "author": "Marc-Antoine Ruel <hello@marcantoineruel.com>",
   "license": "MIT",
   "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
   "scripts": {
     "commit": "git-cz"
   },
@@ -25,6 +30,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": ">=4",
+    "lerna": "^3.22.1",
     "lint-staged": ">=10",
     "prettier": "^2.0.5"
   },
