:recycle: Change scope from maru3l to wldlab

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@maru3l/utils",
+  "name": "@wldlab/utils",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:maru3l/utils.git",
